# On-chain-Casino-Arb-Bot-

./: .gitignore  README.md  structure.md
.cursor/plans/: cursor1.plan.md
house-edge-sniper/: README.md  docker-compose.yml
house-edge-sniper/go-coordinator/: go.mod  go.sum
house-edge-sniper/go-coordinator/cmd/server/: main.go
house-edge-sniper/go-coordinator/internal/kafka_consumer/: consumer.go
house-edge-sniper/go-coordinator/internal/risk_manager/: risk.go
house-edge-sniper/go-coordinator/internal/ws_hub/: hub.go
house-edge-sniper/next-dashboard/: package-lock.json  package.json
house-edge-sniper/next-dashboard/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  trace
house-edge-sniper/next-dashboard/.next/cache/: .tsbuildinfo  config.json
house-edge-sniper/next-dashboard/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  server-reference-manifest.json
house-edge-sniper/next-dashboard/.next/server/app/: _not-found.html  _not-found.rsc  dashboard.html  (+7 more)
house-edge-sniper/next-dashboard/app/: globals.css  layout.tsx
house-edge-sniper/next-dashboard/app/dashboard/: page.tsx
house-edge-sniper/next-dashboard/app/settings/: page.tsx
house-edge-sniper/next-dashboard/components/charts/: OpportunityChart.tsx
house-edge-sniper/rust-sniper/: Cargo.toml
house-edge-sniper/rust-sniper/src/: ev_calculator.rs  flashbots_relay.rs  kafka_producer.rs  main.rs  mempool_listener.rs
(+21 files in other folders)
